# FinalSub

./: .gitignore  MIGRATION_MATRIX.md  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  task.md  walkthrough.md
.mimocode/skills/dream-memory-consolidation/: SKILL.md
docs/: DEVELOPMENT.md  brand-assets.md  ffmpeg-sidecar-spike.md  macos-release-packaging-sop.md  qa.md  release-sop.md  sensevoice-spike.md  task-model.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: whisper-cli-aarch64-apple-darwin  whisper-cli-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/licenses/: ffmpeg-NOTICE.md  whisper-NOTICE.md
src-tauri/resources/parakeet/: parakeet_transcribe.py
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs  opencc.rs  task_runner.rs
src-tauri/src/core/asr/: custom.rs  mod.rs  parakeet.rs  sensevoice.rs  whisper.rs
src-tauri/src/core/audio/: mod.rs
src-tauri/src/core/models/: download.rs  mod.rs
src-tauri/src/core/settings/: mod.rs
src-tauri/src/core/subtitle/: mod.rs
src-tauri/src/core/task_queue/: mod.rs
src-tauri/src/core/translation/: mod.rs
src/components/: Layout.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx
src/lib/: i18n.tsx  tauri.ts  theme.tsx
src/pages/: HomePage.tsx  ModelsPage.tsx  PlaceholderPage.tsx  SettingsPage.tsx  SubtitleMergePage.tsx  TasksPage.tsx  TranslationPage.tsx
src/pages/proofread/: ProofreadEditor.tsx  ProofreadFileList.tsx  ProofreadImport.tsx  ProofreadPage.tsx  ProofreadTaskList.tsx  Toast.tsx  languageDetector.ts  proofreadUtils.ts  subtitleDetector.ts  subtitleFormats.ts  types.ts  useStandaloneSubtitles.ts  useVideoPlayer.ts
src/pages/proofread/subtitle/: BatchAiOptimizeDialog.tsx  CurrentSubtitle.tsx  SubtitleEditToolbar.tsx  SubtitleList.tsx  VideoInfo.tsx  VideoPlayer.tsx
